# ai-in-e-grid-basics

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.opencode/: AGENTS.md
demos/: 01_forecasting.py  02_anomaly_detection.py  03_interactive_dashboard.py  04_grid_optimization.py
docs/: 00-quickstart.md  01-what-is-a-smart-grid.md  02-understanding-data.md  03-forecasting.md  04-anomaly-detection.md  05-interactive-app.md  06-grid-optimization.md  07-whats-next.md
notebooks/: 01_explore_the_data.ipynb  02_forecasting_lab.ipynb  03_anomaly_detection_lab.ipynb  04_challenge_yourself.ipynb
quizzes/: quiz_anomaly.md  quiz_forecasting.md  quiz_grid.md
src/egrid_learning/: __init__.py
src/egrid_learning/data/: generator.py
src/egrid_learning/grid_sim/: dispatch.py
src/egrid_learning/models/: anomaly.py  forecasting.py
src/egrid_learning/visualization/: plots.py
