[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "egrid-learning"
version = "1.0.0"
description = "Learn AI concepts through smart grid examples — no experience needed"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.3.2",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.9.2",
    "streamlit>=1.28",
    "pandapower>=3.4.0",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
